--- a/ELT_python.ipynb
+++ b/ELT_python.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "def execute_query_1(query):\n",
     "    try:\n",
-    "        conn = pymysql.connect(host='127.0.0.1',port=3306,user='root',password='!Zaleoc2ouiougi',db='test01',charset='utf8')\n",
+    "        conn = pymysql.connect(host='?',port=3306,user='?',password='?',db='?',charset='utf8')\n",
     "        cur = conn.cursor()\n",
     "        start = time.time()\n",
     "        cur.execute(query) # difference\n",
@@ -93,7 +93,7 @@
     "        all_logs.append(logs)\n",
     "        query_result = cur.fetchall()\n",
     "        cur.close()\n",
-    "        conn.commit() #一定要提交数据!!不然在数据库中是没有数据显示的\n",
+    "        conn.commit() \n",
     "    except Exception as e:\n",
     "        s = \"Source Read Fail!! UNEXPECTED ERROR: \" + str(sys.exc_info())+\"\\n\"+str(e)+\"\\nError on line {}\".format(sys.exc_info()[-1].tb_lineno)\n",
     "        all_logs.append(s)\n",
@@ -260,7 +260,7 @@
     "# for create the table\n",
     "def execute_query_2(query):\n",
     "    try:\n",
-    "        conn = pymysql.connect(host='127.0.0.1',port=3306,user='root',password='!Zaleoc2ouiougi',db='test02',charset='utf8')\n",
+    "        conn = pymysql.connect(host='?',port=?,user='?',password='?',db='?',charset='utf8')\n",
     "        cur = conn.cursor()\n",
     "        start = time.time()\n",
     "        cur.execute(query) # difference\n",
@@ -365,7 +365,7 @@
     "# for insert the data\n",
     "def execute_query_2_many(query,data):\n",
     "    try:\n",
-    "        conn = pymysql.connect(host='127.0.0.1',port=3306,user='root',password='!Zaleoc2ouiougi',db='test02',charset='utf8')\n",
+    "        conn = pymysql.connect(host='?',port=?,user='?',password='?',db='?',charset='utf8')\n",
     "        cur = conn.cursor()\n",
     "        start = time.time()\n",
     "        cur.executemany(query,data)  # difference\n",
@@ -534,7 +534,7 @@
     "\n",
     "def execute_query_log(query):\n",
     "    try:\n",
-    "        conn = pymysql.connect(host='127.0.0.1',port=3306,user='root',password='!Zaleoc2ouiougi',db='test02',charset='utf8')\n",
+    "        conn = pymysql.connect(host='?',port=?,user='?',password='?',db='?',charset='utf8')\n",
     "        cur = conn.cursor()\n",
     "        start = time.time()\n",
     "        cur.execute(query) # difference\n",
